[package]
name       = "what_error"
version    = "0.1.0"
authors    = ["museun <museun@outlook.com>"]
edition    = "2018"
license    = "0BSD"
readme     = "README.md"
repository = "https://github.com/museun/what_error"

[dependencies]
anyhow    = "1.0.32"
ntapi     = "0.3.4"
pico-args = "0.3.4"
winapi    = { version = "0.3.9", features = ["winbase", "winnt", "minwindef", "libloaderapi", "winerror"] }
